[gd_scene load_steps=3 format=2]

[ext_resource path="res://nodes/dialog/console.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 14.0
content_margin_right = 4.0
content_margin_top = 8.0
content_margin_bottom = 8.0
bg_color = Color( 1, 1, 1, 0 )
draw_center = false
border_width_left = 2
border_color = Color( 1, 1, 1, 0.709804 )

[node name="Dialog" type="PanelContainer"]
margin_top = 150.0
margin_right = 221.0
margin_bottom = 242.0
script = ExtResource( 1 )

[node name="DialogPlay" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 214.0
margin_bottom = 85.0
mouse_filter = 2

[node name="Header" type="HBoxContainer" parent="DialogPlay"]
margin_right = 207.0
margin_bottom = 14.0

[node name="Icon" type="Label" parent="DialogPlay/Header"]
self_modulate = Color( 0.701961, 0.701961, 0.701961, 1 )
margin_right = 4.0
margin_bottom = 14.0
text = "ï¡© "

[node name="CharacterProfile" type="HBoxContainer" parent="DialogPlay/Header"]
margin_left = 8.0
margin_right = 207.0
margin_bottom = 14.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Color" type="ColorRect" parent="DialogPlay/Header/CharacterProfile"]
margin_right = 14.0
margin_bottom = 14.0
rect_min_size = Vector2( 14, 14 )
mouse_filter = 2
size_flags_vertical = 4
size_flags_stretch_ratio = 2.0
color = Color( 1, 1, 1, 0.709804 )

[node name="Spacer" type="MarginContainer" parent="DialogPlay/Header/CharacterProfile"]
margin_left = 18.0
margin_right = 22.0
margin_bottom = 14.0
rect_min_size = Vector2( 4, 0 )
size_flags_vertical = 3

[node name="Name" type="Label" parent="DialogPlay/Header/CharacterProfile"]
margin_left = 26.0
margin_right = 199.0
margin_bottom = 14.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
text = "{character-name}"
autowrap = true

[node name="Box" type="PanelContainer" parent="DialogPlay"]
margin_top = 18.0
margin_right = 207.0
margin_bottom = 78.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )

[node name="Rows" type="VBoxContainer" parent="DialogPlay/Box"]
margin_left = 14.0
margin_top = 8.0
margin_right = 203.0
margin_bottom = 52.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PlayableLines" type="VBoxContainer" parent="DialogPlay/Box/Rows"]
margin_right = 189.0
margin_bottom = 44.0

[node name="LineA" type="Button" parent="DialogPlay/Box/Rows/PlayableLines"]
margin_right = 189.0
margin_bottom = 20.0
text = "{ dialog line x }"
clip_text = true
align = 0

[node name="LineB" type="Button" parent="DialogPlay/Box/Rows/PlayableLines"]
margin_top = 24.0
margin_right = 189.0
margin_bottom = 44.0
text = "{ another dialogue line }"
clip_text = true
align = 0

[node name="Played" type="Label" parent="DialogPlay/Box/Rows"]
visible = false
margin_top = 48.0
margin_right = 193.0
margin_bottom = 62.0
size_flags_horizontal = 3
text = "{ played line or chosen reply }"
autowrap = true
